Unwrapping txs link fix, design updates

--- a/client/src/components/Input/Input.module.scss
+++ b/client/src/components/Input/Input.module.scss
@@ -120,6 +120,14 @@
   }
 }
 
+.infoBadge {
+  margin: 0 0 20px 0;
+
+  a:hover {
+    color: $iron;
+  }
+}
+
 .inputGroup {
   position: relative;
 
