--- a/client/src/pages/UnwrapDomainPage/styles/UnwrapDomainForm.module.scss
+++ b/client/src/pages/UnwrapDomainPage/styles/UnwrapDomainForm.module.scss
@@ -10,6 +10,14 @@
     align-self: flex-start;
     @include sf-pro-display-medium;
   }
+
+  .infoBadge {
+    margin: 0 0 20px 0;
+
+    a:hover {
+      color: $iron;
+    }
+  }
 }
 
 .additionalSubInfo {
